# student-pg-db

./: .coverage  .coveragerc  .env  .env.prod.example  .env.test.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
Docker/: docker-compose.test.yml  docker-compose.yml
Docker/init-scripts/: 01-create-user.sql
alembic/: env.py
alembic/versions/: 24f95aaa4e43_add_xxx_fields.py  3a755656ddc4_xxx.py  54ecad89d8f8_增加commit_有助于理解字段含义.py  61ecc2a0d299_xxx.py  9ef966fd378e_change_students_table.py  cb08201b3a0b_init_students_table.py
scripts/: run_docker.sh  run_docker_dev.sh  run_docker_test.sh  test.sh
src/student_pg_db/: __init__.py  cli.py  config.py  main.py
src/student_pg_db/api/routes/: students.py
src/student_pg_db/core/: connection.py  session.py
src/student_pg_db/database/: manager.py  repository.py
src/student_pg_db/models/: base.py  students.py
src/student_pg_db/schemas/: __init__.py  student.py
src/student_pg_db/utils/: data_generator.py
tests/: conftest.py  test_data_generator.py  test_repository.py
tests/e2e/: test_cli.py
tests/integration/: test_manager.py  test_repository.py
tests/unit/: test_models.py  test_utils.py
